Edited maven and Readme